[gd_scene load_steps=3 format=3 uid="uid://bhi0b8c2jmi1d"]

[ext_resource type="Script" path="res://components/environment/object.gd" id="1_lc7tq"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7lvc8"]
bounce = 0.32

[node name="Object" type="RigidBody2D"]
texture_filter = 3
collision_layer = 16
collision_mask = 17
mass = 0.005
physics_material_override = SubResource("PhysicsMaterial_7lvc8")
gravity_scale = 0.8
script = ExtResource("1_lc7tq")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="ObjectCollisionShape" type="CollisionPolygon2D" parent="."]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
top_level = true
collision_layer = 2
collision_mask = 0

[node name="PlatformCollisionShape" type="CollisionPolygon2D" parent="CharacterBody2D"]
one_way_collision = true

[node name="VertexMarkers" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="VertexMarkers"]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../CharacterBody2D")
update_rotation = false
